k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enterprise-mongo
  template:
    metadata:
      labels:
        app: enterprise-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:8
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: enterprise-mongo-pvc
