k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-frontend
spec:
  selector:
    app: enterprise-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
