k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-frontend
  template:
    metadata:
      labels:
        app: employee-frontend
    spec:
      containers:
        - name: frontend
          image: pradeepdevops5281/employee-management-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: employee-frontend
spec:
  type: NodePort
  selector:
    app: employee-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
